objects/TAM_Next_Steps__c/TAM_Next_Steps__c.object-meta.xml
<CustomObject>
    <label>Next Step</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Note ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Next Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>