objects/TAM_Next_Steps__c/fields/CAM__c.field-meta.xml
<CustomField>
    <fullName>CAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Next_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>