objects/TAM_Next_Steps__c/fields/CAM_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>CAM_Next_Steps__c</fullName>
    <description>Label change from &quot;Partner Next Steps&quot; KB-9469, Case 44152 2020-04-06</description>
    <inlineHelpText>Label change from &quot;Partner Next Steps&quot; KB-9469, Case 44152 2020-04-06</inlineHelpText>
    <label>Internal Partner Next Steps</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>