objects/TAM_Next_Steps__c/fields/CE_Owner__c.field-meta.xml
<CustomField>
    <fullName>CE_Owner__c</fullName>
    <description>INC0137855

11.05.2024 - Deprecated. Jira ticket SS-9539</description>
    <formula>CreatedBy.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED - Owner (formula)</label>
    <type>Text</type>
</CustomField>