objects/TAM_Next_Steps__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>11.05.2024 - Deprecated. Jira ticket SS-9539</description>
    <formula>Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED - Close Date</label>
    <type>Date</type>
</CustomField>