objects/TAM_Next_Steps__c/fields/Created_by_Screen_Flow__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Screen_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, it means that the record was created by the New Next Step flow, so we don&apos;t want to run the After Insert flow. Jira ticket SS-9539</description>
    <label>Created by Screen Flow</label>
    <type>Checkbox</type>
</CustomField>