objects/TAM_Next_Steps__c/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <description>11.05.2024 - Deprecated. Jira ticket SS-9539</description>
    <formula>Text(Opportunity__r.ForecastCategoryName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED - Forecast Category</label>
    <type>Text</type>
</CustomField>