objects/TAM_Next_Steps__c/fields/Level_4__c.field-meta.xml
<CustomField>
    <fullName>Level_4__c</fullName>
    <description>11.05.2024 - Deprecated. Jira ticket SS-9539</description>
    <formula>Opportunity__r.Owner.Level_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED - Level 4</label>
    <type>Text</type>
</CustomField>