objects/TAM_Next_Steps__c/fields/Management_notes__c.field-meta.xml
<CustomField>
    <fullName>Management_notes__c</fullName>
    <description>11.05.2024 - No longer used; Sales managers update the Management notes directly on the opportunity page or through Clari. Jira ticket SS-9539</description>
    <label>DEPRECATED - Management notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>