objects/TAM_Next_Steps__c/fields/Onsite_Visit__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Visit__c</fullName>
    <description>11.05.2024 - Deprecated. Jira ticket SS-9539</description>
    <label>DEPRECATED - Last Onsite Visit</label>
    <type>Date</type>
</CustomField>