objects/TAM_Next_Steps__c/fields/Opportunity_Account__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account__c</fullName>
    <description>11.05.2024 - Deprecated. Jira ticket SS-9539</description>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED - Opportunity Account</label>
    <type>Text</type>
</CustomField>