objects/TAM_Next_Steps__c/fields/Oppty_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Owner_Manager__c</fullName>
    <description>11.05.2024 - Deprecated. Jira ticket SS-9539</description>
    <formula>Opportunity__r.Owner.Manager.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED - Oppty Owner Manager</label>
    <type>Text</type>
</CustomField>