objects/TAM_Next_Steps__c/fields/Sales_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Sales_Next_Steps__c</fullName>
    <description>11.05.2024 - No longer used; Sales updates the Sales notes directly on the opportunity page or through Clari. Jira ticket SS-9539</description>
    <label>DEPRECATED - Sales Next Steps</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>