objects/TAM_Next_Steps__c/fields/TAM_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>TAM_Next_Steps__c</fullName>
    <label>TAM/TSE Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>