objects/TAM_Next_Steps__c/fields/TAM_Owner__c.field-meta.xml
<CustomField>
    <fullName>TAM_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>11.05.2024 - Deprecated. Jira ticket SS-9539</description>
    <label>DEPRECATED - TAM Owner (old)</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>00132000019soMf</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Next Steps</relationshipLabel>
    <relationshipName>Next_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>