objects/TAM_Next_Steps__c/fields/TAM_Owner_user__c.field-meta.xml
<CustomField>
    <fullName>TAM_Owner_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAM Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oppty_Next_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>