objects/TAM_Next_Steps__c/recordTypes/CAM_Next_Step.recordType-meta.xml
<RecordType>
    <fullName>CAM_Next_Step</fullName>
    <active>true</active>
    <label>CAM Next Step</label>
</RecordType>