objects/TAM_Next_Steps__c/recordTypes/Management_Notes.recordType-meta.xml
<RecordType>
    <fullName>Management_Notes</fullName>
    <active>false</active>
    <description>11.05.2024 - Deactivated</description>
    <label>DEPRECATED - Management Notes</label>
</RecordType>