objects/TAM_Next_Steps__c/recordTypes/Sales_Next_Step.recordType-meta.xml
<RecordType>
    <fullName>Sales_Next_Step</fullName>
    <active>false</active>
    <description>11.05.2024 - Deactivated</description>
    <label>DEPRECATED - Sales Next Step</label>
</RecordType>