objects/TAM_Next_Steps__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TAM_Next_Steps__c.TAM_Next_Step</value>
    </filters>
    <label>All</label>
</ListView>