objects/TAM_Next_Steps__c/listViews/CQ_Mgmt_Notes.listView-meta.xml
<ListView>
    <fullName>CQ_Mgmt_Notes</fullName>
    <columns>NAME</columns>
    <columns>Level_4__c</columns>
    <columns>Forecast_Category__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Management_notes__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TAM_Next_Steps__c.Management_Notes</value>
    </filters>
    <filters>
        <field>Close_Date__c</field>
        <operation>equals</operation>
        <value>THIS_FISCAL_QUARTER</value>
    </filters>
    <filters>
        <field>Forecast_Category__c</field>
        <operation>notEqual</operation>
        <value>Omitted,Closed</value>
    </filters>
    <label>CQ Mgmt Notes</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>